--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     window.$docsify = {
       el: '#app',
       name: 'JustAuth',
-      // nameLink: 'https://justauth.cn',
+      // nameLink: 'https://www.justauth.cn',
       // logo: '_media/Justauth-横向@0,5x.png',
       search: {
         maxAge: 86400000,
@@ -53,7 +53,7 @@
           var footer = [
             '<hr/>',
             '<footer>',
-            '<span><a href="https://justauth.cn">JustAuth官网</a><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f525.png" alt="fire"> · <a href="https://github.com/justauth/JustAuth">Github</a> · <a href="https://gitee.com/yadong.zhang/JustAuth">Gitee</a> &copy; 2019-2020.</span>',
+            '<span><a href="https://www.justauth.cn">JustAuth官网</a><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f525.png" alt="fire"> · <a href="https://github.com/justauth/JustAuth">Github</a> · <a href="https://gitee.com/yadong.zhang/JustAuth">Gitee</a> &copy; 2019-2020.</span>',
             '<span> Proudly published with <a href="https://github.com/docsifyjs/docsify" target="_blank">docsify</a>.</span>',
             '</footer>'
           ].join('');
@@ -93,6 +93,7 @@
   <script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   <script>mermaid.initialize({startOnLoad:true});</script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1.20.0/components/prism-java.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1.20.0/components/prism-sql.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
