--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta name="google-site-verification" content="tjusIIaEiX5v_c2v8wsZwUGUIHbYLaHk3MqNtv9ai5Y" />
+  <meta name="baidu-site-verification" content="code-lzLQR3pi2O" />
   <meta charset="UTF-8">
-  <title>JustAuth - 史上最全的整合第三方登录的开源库</title>
+  <title>JustAuth - 开箱即用的整合第三方登录的开源组件</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-  <meta name="description" content="JustAuth，史上最全的整合第三方登录的开源库" />
+  <meta name="description" content="JustAuth，开箱即用的整合第三方登录的开源组件" />
   <meta name="keywords" content="JustAuth,第三方授权登录,OAuth" />
 
-  <meta itemprop="name" content="JustAuth,史上最全的整合第三方登录的开源库" />
+  <meta itemprop="name" content="JustAuth,开箱即用的整合第三方登录的开源组件" />
   <meta itemprop="description" content="JustAuth，如你所见，它仅仅是一个第三方授权登录的工具类库，它可以让我们脱离繁琐的第三方登录SDK，让登录变得So easy!" />
   <meta itemprop="image" content="./_media/cover.png" />
 
@@ -53,7 +54,7 @@
           var footer = [
             '<hr/>',
             '<footer>',
-            '<span><a href="https://www.justauth.cn">JustAuth官网</a><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f525.png" alt="fire"> · <a href="https://github.com/justauth/JustAuth">Github</a> · <a href="https://gitee.com/yadong.zhang/JustAuth">Gitee</a> &copy; 2019-2020.</span>',
+            '<span><a href="https://www.justauth.cn" target="_blank">JustAuth官网</a><img class="emoji" src="https://github.githubassets.com/images/icons/emoji/unicode/1f525.png" alt="fire"> · <a href="https://github.com/justauth/JustAuth">Github</a> · <a href="https://gitee.com/yadong.zhang/JustAuth">Gitee</a> &copy; 2019-2020.</span>',
             '<span> Proudly published with <a href="https://github.com/docsifyjs/docsify" target="_blank">docsify</a>.</span>',
             '</footer>'
           ].join('');
